--- a/index.html
+++ b/index.html
@@ -15,7 +15,11 @@
         <nav id="sidebar">
             <ul class="list-unstyled components sidebar-content">
                 <img class="img-head" src="img/JonasFerilskramynd.jpg" alt="JonasHelgi">
-                <h3>Velkomin!</h3>
+                <h3 class="h3-head">Velkomin!</h3>
+                <div class="sidebar-logo">
+                    <a class="sidebar-logo-link"href="https://github.com/IceJonas" target="_blank"><i class="fab fa-github-square fa-2x"></i></a>
+                    <a href="https://www.linkedin.com/in/jonas-helgi-sverrisson-87252a1bb/" target="_blank"><i class="fab fa-linkedin fa-2x"></i></a>
+                </div>
                 <li>
                     <a href="#inngangur"><i class="fas fa-home"></i> &nbsp;Inngangur</a>
                 </li>
@@ -26,7 +30,7 @@
                     <a href="#umMig"><i class="far fa-address-card"></i> &nbsp;Um mig</a>
                 </li>
                 <li>
-                    <a href="#ferilskra"><i class="far fa-file"></i> &nbsp;&nbsp; Ferilskrá</a>
+                    <a href="#ferilskra"><i class="far fa-file"></i> &nbsp;Ferilskrá</a>
                 </li>
             </ul>
         </nav>
@@ -74,7 +78,7 @@
             <div class="row">
                 <div class="col-6 ">
                     <h2 id="umMig">Um mig</h2>
-                    <p>Lorem ipsum dolor sit amet, consecat cupulpa queserunt mollit anim id est laborum.</p>
+                    <p></p>
                 </div>
                 <div class="col-6 img-about-container">
                     <img class="img-about" src="img/AukaMynd.jpg" alt="">
