--- a/index-en.html
+++ b/index-en.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Jónas Helgi Vefsíða</title>
+    <title>Jónas Helgi Portfolio</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
 </head>
@@ -15,22 +15,22 @@
         <nav id="sidebar">
             <ul class="list-unstyled components sidebar-content">
                 <img class="img-head" src="img/JonasFerilskramynd.jpg" alt="JonasHelgi">
-                <h3 class="h3-head">Velkomin!</h3>
+                <h3 class="h3-head">Welcome!</h3>
                 <div class="sidebar-logo">
                     <a class="sidebar-logo-link" href="https://github.com/IceJonas" target="_blank"><i class="fab fa-github-square fa-2x"></i></a>
                     <a href="https://www.linkedin.com/in/jonas-helgi-sverrisson-87252a1bb/" target="_blank"><i class="fab fa-linkedin fa-2x"></i></a>
                 </div>
                 <li>
-                    <a href="#inngangur"><i class="fas fa-home"></i> &nbsp;Inngangur</a>
+                    <a href="#inngangur"><i class="fas fa-home"></i> &nbsp;Home</a>
                 </li>
                 <li>
-                    <a href="#verkefni"><i class="fas fa-tasks"></i> &nbsp;Verkefni</a>
+                    <a href="#verkefni"><i class="fas fa-tasks"></i> &nbsp;Projects</a>
                 </li>
                 <li>
-                    <a href="#umMig"><i class="far fa-address-card"></i> &nbsp;Um mig</a>
+                    <a href="#umMig"><i class="far fa-address-card"></i> &nbsp;About me</a>
                 </li>
                 <li>
-                    <a href="#ferilskra"><i class="far fa-file"></i> &nbsp;Ferilskrá</a>
+                    <a href="#ferilskra"><i class="far fa-file"></i> &nbsp;Resume/CV</a>
                 </li>
             </ul>
         </nav>
@@ -50,11 +50,10 @@
                 </div>
             </div>
 
-            <h2 id="inngangur">Ég heiti Jónas Helgi</h2>
+            <h2 id="inngangur">My name is Jónas Helgi</h2>
             <p>
-                Ég er að ljúka við annað árið mitt í tölvunarfræði við
-                Háskóla Íslands. Áreiðanleiki, vinnusemi, sjálfstæði og nákvæmni fyrirfinnst
-                í öllum mínum störfum.
+                I am finishing my second year at the University of Iceland in Computer Science. Reliability, hard work,
+                independence and precision for feelin all my work.
             </p>
             <p>Lorem ipsum dolor sit elit esse anim id est laborum.</p>
 
