--- a/index-en.html
+++ b/index-en.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Jónas Helgi Portfolio</title>
+    <title>Jónas Helgi Vefsíða</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
 </head>
@@ -14,29 +14,33 @@
     <div class="wrapper">
         <nav id="sidebar">
             <ul class="list-unstyled components sidebar-content">
-                <img class="img-head" src="img/JonasFerilskramynd.jpg" alt="JonasHelgi">
-                <h3 class="h3-head">Welcome!</h3>
-                <div class="sidebar-logo">
-                    <a class="sidebar-logo-link" href="https://github.com/IceJonas" target="_blank"><i class="fab fa-github-square fa-2x"></i></a>
-                    <a href="https://www.linkedin.com/in/jonas-helgi-sverrisson-87252a1bb/" target="_blank"><i class="fab fa-linkedin fa-2x"></i></a>
-                </div>
                 <li>
-                    <a href="#inngangur"><i class="fas fa-home"></i> &nbsp;Home</a>
+                    <img class="img-head" src="img/JonasFerilskramynd.jpg" alt="JonasHelgi">
+                    <h3>Velkomin!</h3>
+                    <div class="sidebar-logo">
+                        <a href="https://github.com/IceJonas" target="_blank"><i class="fab fa-github-square fa-2x"></i></a>
+                    </div>
                 </li>
                 <li>
-                    <a href="#verkefni"><i class="fas fa-tasks"></i> &nbsp;Projects</a>
+                    <a href="#inngangur"><i class="fas fa-home"></i> &nbsp;Inngangur</a>
                 </li>
                 <li>
-                    <a href="#umMig"><i class="far fa-address-card"></i> &nbsp;About me</a>
+                    <a href="#verkefni"><i class="fas fa-tasks"></i> &nbsp;Verkefni</a>
                 </li>
                 <li>
-                    <a href="#ferilskra"><i class="far fa-file"></i> &nbsp;Resume/CV</a>
+                    <a href="#umMig"><i class="far fa-address-card"></i> &nbsp;Um mig</a>
+                </li>
+                <li>
+                    <a href="#namskeid"><i class="fas fa-book-open"></i> &nbsp;Námskeið</a>
+                </li>
+                <li>
+                    <a href="#ferilskra"><i class="far fa-file"></i> &nbsp;Ferilskrá</a>
                 </li>
             </ul>
         </nav>
         <!-- Texti -->
         <div id="content">
-            <ul class="nav">
+            <ul id="inngangur" class="nav justify-content-end">
                 <li class="nav-item">
                     <a class="nav-link active" href="index.html">Íslenska</a>
                 </li>
@@ -50,53 +54,160 @@
                 </div>
             </div>
 
-            <h2 id="inngangur">My name is Jónas Helgi</h2>
-            <p>
-                I am finishing my second year at the University of Iceland in Computer Science. Reliability, hard work,
-                independence and precision for feelin all my work.
-            </p>
-            <p>Lorem ipsum dolor sit elit esse anim id est laborum.</p>
+            <!-- INNGANGUR -->
+            <section>
+                <h2>Ég heiti Jónas Helgi</h2>
+                <p>
+                    Ég er að ljúka við annað árið mitt í tölvunarfræði við
+                    Háskóla Íslands. Áreiðanleiki, vinnusemi, sjálfstæði og nákvæmni fyrirfinnst
+                    í öllum mínum störfum.
+                </p>
+                <p>Lorem ipsum dolor sit elit esse anim id est laborum.</p>
+            </section>
 
             <div class="line"></div>
 
-            <h2 id="verkefni">Persónuleg verkefni</h2>
-            <p>Hér munu vera öll public verkefni mín vera sýnd.</p>
-            <div class="row">
-                <div class="col-sm-6">
-                    <div class="card">
-                        <div class="card-body">
-                            <h5 class="card-title">Veður Forritið</h5>
-                            <p class="card-text">Ég var forrvitin hvort hægt væri að spá fyrir veðrið í Reykjavík ef maður hefði 20 ár af upplýsingum.</p>
-                            <a href="https://github.com/IceJonas" target="_blank" class="btn btn-primary verk-btn">Github Síða</a>
+            <!-- PERSÓNULEG VERKEFNI -->
+            <section id="verkefni">
+                <h2>Persónuleg verkefni</h2>
+                <p>Hér munu vera öll public verkefni mín vera sýnd.</p>
+                <div class="row">
+                    <div class="col-sm-6">
+                        <div class="card">
+                            <div class="card-body">
+                                <h5 class="card-title">Veður Forritið</h5>
+                                <p class="card-text">Ég var forrvitin hvort hægt væri að spá fyrir veðrið í Reykjavík ef maður hefði 20 ár af upplýsingum.</p>
+                                <a href="https://github.com/IceJonas" target="_blank" class="btn btn-primary verk-btn">Github Síða</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-sm-6">
+                        <div class="card">
+                            <div class="card-body">
+                                <h5 class="card-title">MMS Verkefnið</h5>
+                                <p class="card-text">Ég var forrvitin hvort hægt væri að spá fyrir veðrið í Reykjavík ef maður hefði 20 ár af upplýsingum.</p>
+                                <a href="https://github.com/IceJonas" target="_blank" class="btn btn-primary verk-btn">Github Síða</a>
+                            </div>
                         </div>
                     </div>
                 </div>
-                <div class="col-sm-6">
-                    <div class="card">
-                        <div class="card-body">
-                            <h5 class="card-title">MMS Verkefnið</h5>
-                            <p class="card-text">Ég var forrvitin hvort hægt væri að spá fyrir veðrið í Reykjavík ef maður hefði 20 ár af upplýsingum.</p>
-                            <a href="https://github.com/IceJonas" target="_blank" class="btn btn-primary verk-btn">Github Síða</a>
+            </section>
+
+            <div class="line"></div>
+
+
+            <!-- UM MIG -->
+            <section id="umMig">
+                <div class="row">
+                    <div class="col-6 ">
+                        <h2>Um mig</h2>
+                        <p>
+                            Áreiðanleiki, vinnusemi, sjálfstæði og nákvæmni fyrirfinnst í öllum mínum störfum.
+                            Ég er góður í teymisvinnu og hvet samstarfsfólk mitt áfram. Ég er fljótur að aðlagast
+                            og læra nýja hluti. Ég er forvitinn sem veldur því að ég er duglegur að leysa vandamál.
+                            Ég hugsa út fyrir kassann og sækist í að læra, hvort sem það er í skólanum eða að
+                            sjálfsdáðum.
+                        </p>
+                        <p>
+                            Mín helstu áhugamál eru að læra nýja hluti, elda góðan mat, spila borðspil og fara út að hlaupa.
+                        </p>
+                    </div>
+                    <div class="col-6 img-about-container">
+                        <img class="img-about" src="img/AukaMynd.jpg" alt="">
+                    </div>
+                </div>
+            </section>
+
+            <div class="line"></div>
+
+            <!-- NÁMSKEIÐ SEM ÉG HEF TEKIÐ -->
+            <section id="namskeid">
+                <h2>Námskeið sem ég hef tekið</h2>
+                <div class="row">
+                    <div class="col-sm-6">
+                        <div class="card card-namskeid">
+                            <div class="card-body namskeid">
+                                <h5 class="card-title">The Complete 2021 Web Development Bootcamp</h5>
+                                <p class="card-text">Become a full-stack web developer with just one course. HTML, CSS, Javascript, Node, React, MongoDB and more!</p>
+                                <a href="https://www.udemy.com/course/the-complete-web-development-bootcamp/" target="_blank" class="btn btn-primary verk-btn">Námskeið</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-sm-6">
+                        <div class="card card-namskeid">
+                            <div class="card-body">
+                                <h5 class="card-title">Creating powerful API's with Django Rest Framework on Heroku</h5>
+                                <p class="card-text">Learn how to create powerful API's with Django 2.1 and Django Rest Framework 3 deploying on Heroku.</p>
+                                <a href="https://www.udemy.com/course/powerful-apis-django-rest-framework/" target="_blank" class="btn btn-primary verk-btn">Námskeið</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-sm-6">
+                        <div class="card card-namskeid">
+                            <div class="card-body">
+                                <h5 class="card-title">Tableau 2020 A-Z: Hands-On Tableau Training for Data Science</h5>
+                                <p class="card-text">Learn Tableau 2020 for data science step by step. Real-life data analytics exercises & quizzes included. Learn by doing!</p>
+                                <a href="https://www.udemy.com/course/tableau10/" target="_blank" class="btn btn-primary verk-btn">Námskeið</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-sm-6">
+                        <div class="card card-namskeid">
+                            <div class="card-body">
+                                <h5 class="card-title">Complete React Developer in 2021 (w/ Redux, Hooks, GraphQL) </h5>
+                                <p class="card-text">Become a Senior React Developer! Build a massive E-commerce app with Redux, Hooks, GraphQL, ContextAPI, Stripe, Firebase.</p>
+                                <a href="https://www.udemy.com/course/complete-react-developer-zero-to-mastery/" target="_blank" class="btn btn-primary verk-btn">Námskeið</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-sm-6">
+                        <div class="card card-namskeid">
+                            <div class="card-body">
+                                <h5 class="card-title">Java Programming Masterclass for Software Developers</h5>
+                                <p class="card-text">Learn Java In This Course And Become a Computer Programmer. Obtain valuable Core Java Skills And Java Certification.</p>
+                                <a href="https://www.udemy.com/course/java-the-complete-java-developer-course/" target="_blank" class="btn btn-primary verk-btn">Námskeið</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-sm-6">
+                        <div class="card card-namskeid">
+                            <div class="card-body">
+                                <h5 class="card-title">The Python Mega Course: Build 10 Real World Applications</h5>
+                                <p class="card-text">A complete practical Python course for both beginners & intermediates! Master Python 3 by making 10 amazing Python apps.</p>
+                                <a href="https://www.udemy.com/course/the-python-mega-course/" target="_blank" class="btn btn-primary verk-btn">Námskeið</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-sm-6">
+                        <div class="card card-namskeid">
+                            <div class="card-body">
+                                <h5 class="card-title">Spring & Hibernate for Beginners (includes Spring Boot)</h5>
+                                <p class="card-text">Spring 5: Learn Spring 5 Core, AOP, Spring MVC, Spring Security, Spring REST, Spring Boot 2, Thymeleaf, JPA & Hibernate.</p>
+                                <a href="https://www.udemy.com/course/spring-hibernate-tutorial/" target="_blank" class="btn btn-primary verk-btn">Námskeið</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-sm-6">
+                        <div class="card card-namskeid">
+                            <div class="card-body">
+                                <h5 class="card-title">Docker and Kubernetes: The Complete Guide</h5>
+                                <p class="card-text">Build, test, and deploy Docker applications with Kubernetes while learning production-style development workflows.</p>
+                                <a href="https://www.udemy.com/course/docker-and-kubernetes-the-complete-guide/" target="_blank" class="btn btn-primary verk-btn">Námskeið</a>
+                            </div>
                         </div>
                     </div>
                 </div>
-            </div>
+
+            </section>
+
             <div class="line"></div>
 
-            <div class="row">
-                <div class="col-6 ">
-                    <h2 id="umMig">Um mig</h2>
-                    <p></p>
-                </div>
-                <div class="col-6 img-about-container">
-                    <img class="img-about" src="img/AukaMynd.jpg" alt="">
-                </div>
-            </div>
-            <div class="line"></div>
-
-            <h3 id="ferilskra">Ferilskrá</h3>
-            <p>Hægt er að sjá ferilskránna mína með því að ýta á takkan hér að neðan og þá opnast pdf skjal.</p>
-            <a href="img/Ferilskra_JonasHelgi.pdf" target="_blank" class="btn btn-primary verk-btn">Github Síða</a>
+            <!-- FERILSKRÁ -->
+            <section>
+                <h3 id="ferilskra">Ferilskrá</h3>
+                <p>Hægt er að sjá ferilskránna mína með því að ýta á takkan hér að neðan og þá opnast pdf skjal.</p>
+                <a href="img/Ferilskra_JonasHelgi.pdf" target="_blank" class="btn btn-primary verk-btn">Github Síða</a>
+            </section>
 
             <div class="bottom"></div>
         </div>
