--- a/index.html
+++ b/index.html
@@ -88,6 +88,14 @@
 							</div>
 						</div>
 					</div>
+					<div class="col-sm-6">
+						<div class="card">
+							<div class="card-body">
+								<h5 class="card-title">7 Wonders Reiknivél</h5>
+								<p class="card-text">Reiknivél sem reiknar fyrir mann öll stigin í 7 wonders borðspilinu.</p><a class="btn btn-primary verk-btn" href="https://github.com/IceJonas" target="_blank">Github Síða</a>
+							</div>
+						</div>
+					</div>
 				</div>
 			</section>
 			<div class="line"></div>
